Image Expanding on Mobile Fix

--- a/styles.css
+++ b/styles.css
@@ -353,7 +353,7 @@ footer {
     }
     
     .photo img:hover {
-        width: 40rem;
+        width: 80%;
         height: auto;
     }
     
